Fixed a bug with overlapping elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ hr {
   vertical-align: top;
   position: relative;
   width: calc(100% - 270px);
-  min-width: 221px;
+  min-width: 280px;
   min-height: 198.423px;
   margin-right: -4px;
 }
